force-app/main/default/objects/Partida_Rezago__mdt/Partida_Rezago__mdt.object-meta.xml
<CustomObject>
    <label>Partida Rezago</label>
    <pluralLabel>Partidas Rezagos</pluralLabel>
</CustomObject>