force-app/main/default/objects/Partida_Rezago__mdt/fields/Compra_Dolar__c.field-meta.xml
<CustomField>
    <fullName>Compra_Dolar__c</fullName>
    <description>Para identificar si es compra de dolar</description>
    <label>Compra Dolar</label>
    <length>2</length>
    <type>Text</type>
</CustomField>