force-app/main/default/objects/Partida_Rezago__mdt/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <description>Para especificar si corresponde a una cuenta o planilla.-</description>
    <label>Cuenta</label>
    <length>2</length>
    <type>Text</type>
</CustomField>