force-app/main/default/objects/Partida_Rezago__mdt/fields/Cuenta_Debito__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Debito__c</fullName>
    <description>La cuenta débito Correspondiente.-</description>
    <label>Cuenta Debito</label>
    <length>15</length>
    <type>Text</type>
</CustomField>