force-app/main/default/objects/Partida_Rezago__mdt/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <description>Guarda la descripción de la partida con datos que serán cambiados al momento de aplicar: como por ejemplo la cuenta y la fecha.-</description>
    <label>Descripcion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>