force-app/main/default/objects/Partida_Rezago__mdt/fields/Id_Banco__c.field-meta.xml
<CustomField>
    <fullName>Id_Banco__c</fullName>
    <description>Almacena el Código de Banco correspondiente.-</description>
    <label>Id Banco</label>
    <length>3</length>
    <type>Text</type>
</CustomField>