force-app/main/default/objects/Partida_Rezago__mdt/fields/Moneda__c.field-meta.xml
<CustomField>
    <fullName>Moneda__c</fullName>
    <description>Indica la moneda en la cual se realizo la transacción.-</description>
    <label>Moneda</label>
    <length>25</length>
    <type>Text</type>
</CustomField>