force-app/main/default/objects/Partida_Rezago__mdt/fields/Sub_Aplicacion__c.field-meta.xml
<CustomField>
    <fullName>Sub_Aplicacion__c</fullName>
    <description>Guarda el código de la Sub Aplicación.-</description>
    <label>Sub Aplicacion</label>
    <length>3</length>
    <type>Text</type>
</CustomField>