force-app/main/default/objects/Partida_Rezago__mdt/fields/Tipo_Nota__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Nota__c</fullName>
    <description>Indica si es un Crédito o Débito.-</description>
    <label>Tipo Nota</label>
    <length>25</length>
    <type>Text</type>
</CustomField>