force-app/main/default/objects/Partida_Rezago__mdt/fields/Tipo_Transaccion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Transaccion__c</fullName>
    <description>Guarda el código del tipo de transacción.-</description>
    <label>Tipo Transaccion</label>
    <length>3</length>
    <type>Text</type>
</CustomField>